--- a/src/css/HeroContent.scss
+++ b/src/css/HeroContent.scss
@@ -7,6 +7,7 @@ body {
   height: 100vh;
   box-shadow: 0rem -1rem 5rem 2rem rgb(0, 0, 0) inset,
     0rem -2rem 7rem 4rem rgb(36, 36, 36) inset;
+  //border: 1px solid red;
 }
 
 #heroContent {
@@ -29,8 +30,10 @@ body {
 }
 h1 {
   color: rgb(255, 255, 255);
-  font-size: 12vmin;
+  font-size: 14vmin;
   text-align: left;
+  margin-bottom: 5vw;
+  color: rgb(255, 255, 255);
 }
 
 p {
@@ -47,7 +50,7 @@ p {
 #vote {
   display: flex;
   align-items: baseline;
-  margin-top: 0.5vw;
+  margin-top: 1vw;
 
   //border: 1px solid red;
   sup {
@@ -82,4 +85,13 @@ p {
 
 #releasedYear {
   font-size: 1.3vw;
+  display: flex;
+  align-items: center;
+  #genre {
+    margin-left: 1vw;
+    color: rgb(231, 231, 231);
+    p {
+      font-size: 1.1vw;
+    }
+  }
 }
