--- a/src/css/HeroContent.scss
+++ b/src/css/HeroContent.scss
@@ -2,16 +2,21 @@ body {
   background: black;
 }
 #heroPic {
-  position: absolute;
+  position: sticky;
+  top: 0;
   width: 100%;
   height: 100vh;
   box-shadow: 0rem -1rem 5rem 2rem rgb(0, 0, 0) inset,
     0rem -2rem 7rem 4rem rgb(36, 36, 36) inset;
   //border: 1px solid red;
+  background-attachment: fixed;
 }
 
 #heroContent {
-  position: relative;
+  position: fixed;
+  top: 0;
+  background-attachment: fixed;
+
   margin-left: 10vw;
   padding: 5vw 0 5vw 0;
   width: 40vw;
@@ -23,16 +28,17 @@ body {
   //align-items: center;
   justify-content: center;
   color: rgb(233, 233, 233);
+  //background-attachment: fixed;
 
   //border: 1px solid red;
   /// @extend %bacImg;
   //filter: brightness(0.5);
 }
 h1 {
-  color: rgb(255, 255, 255);
-  font-size: 14vmin;
+  // border: 1px solid red;
+  font-size: 12vmin;
   text-align: left;
-  margin-bottom: 5vw;
+  //margin-bottom: 5vw;
   color: rgb(255, 255, 255);
 }
 
@@ -44,7 +50,7 @@ p {
   //border: 1px solid red;
   position: absolute;
   top: 2vw;
-  margin-left: 0.5vw;
+  //margin-left: 0.5vw;
 }
 
 #vote {
@@ -55,7 +61,7 @@ p {
   //border: 1px solid red;
   sup {
     margin: 0vw 0 0 0.8vw;
-    font-size: 1.2vw;
+    font-size: 0.8vw;
 
     span {
       color: rgb(156, 156, 156);
@@ -73,10 +79,10 @@ p {
   //display: flex;
   // align-items: baseline;
   color: rgb(255, 0, 119);
-  font-size: 2vw;
+  font-size: 1.6vw;
   font-weight: bolder;
   //border: 1px solid rgb(94, 255, 0);
-  padding: 0 0.5vw 0 0.5vw;
+  padding: 0vw 0.5vw 0.1vw 0.5vw;
   border: 1px solid rgb(255, 0, 119);
   border-radius: 0.25rem;
 
@@ -91,7 +97,73 @@ p {
     margin-left: 1vw;
     color: rgb(231, 231, 231);
     p {
-      font-size: 1.1vw;
+      font-size: 1vw;
     }
   }
+}
+
+#runtime {
+  background: rgb(255, 29, 104);
+  position: relative;
+  width: 2.9rem;
+  //font-size: 1.3vw;
+  text-align: center;
+  border-radius: 0.4rem;
+  margin-left: 0.5vw;
+  margin-top: 1vw;
+}
+
+#watchTrailer {
+  position: absolute;
+  bottom: 4vw;
+  font-size: 1.2vw;
+  cursor: pointer;
+  color: rgb(181, 176, 224);
+  margin-left: 0.5vw;
+  i {
+    margin-right: 0.5vw;
+  }
+}
+
+iframe {
+  border: 1px solid red;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  top: 10%;
+
+  //transform: translateY(-50%);
+  //transform: translateX(-50%);
+  transform: scale(0);
+  transition: 0.5s;
+  width: 75vw;
+  height: 75vh;
+}
+
+.iFrame {
+  border: 2px solid blue;
+  transform: scale(1);
+  transform: translateY(-50%);
+  transform: translateX(-50%);
+}
+
+.closeIcon {
+  color: rgb(255, 255, 255);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 2vw;
+  font-size: 8vmin;
+  cursor: pointer;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+#closeVid {
+  opacity: 0.4;
+  transform: translateY(-100%);
+}
+
+GetVideos {
+  border: 1px solid red;
 }
