--- a/src/css/MovieSet/movieSet.scss
+++ b/src/css/MovieSet/movieSet.scss
@@ -11,20 +11,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5vw;
+  padding-top: 5vw;
   padding-bottom: 5vw;
+  box-shadow: 0rem 2rem 2rem 4rem black;
+  // border: 1px solid red;
 }
 
 #divImg {
-  // border: 1px solid red;
   position: relative;
   overflow: hidden;
   border-radius: 0.4rem;
   p {
-    font-size: 1.5vw;
-    font-weight: bold;
+    font-size: 1.4vw;
     color: rgb(253, 236, 240);
-    //text-transform: uppercase;
     letter-spacing: 0.1vw;
     padding: 1vw 0.5vw 0 0;
   }
@@ -38,7 +37,6 @@
     background: rgb(252, 46, 46);
     border-radius: 0.4rem 0 0.4vw 0;
     color: white;
-    //width: 2.1rem;
     padding: 0.2vw;
     text-align: center;
   }
@@ -58,17 +56,12 @@
   width: 18vw;
   height: auto;
   overflow: hidden;
-  //border: 1px solid red;
-  //margin: 0 1.5vw 1.5vw 0;
   margin-bottom: 0.4vw;
   filter: brightness(0.8);
   border-radius: 0.4rem;
   transition: 0.7s;
   &:hover {
-    //opacity: 0.8;
     cursor: pointer;
     transform: scale(1.1);
-
-    //filter: blur(1px);
   }
 }
