--- a/src/css/movieDetailsPage.scss
+++ b/src/css/movieDetailsPage.scss
@@ -1,10 +1,89 @@
-#m {
-  border: 1px solid red;
+#loadingP {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background: black;
+  width: 100%;
+  height: auto;
+  color: red;
+  background: white;
+}
+
+#setMoviePage {
+  position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
+  width: 100vw;
+  height: 100%;
+  background: black;
+  img {
+    width: 100vw;
+    height: auto;
+    filter: brightness(0.8);
+  }
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+#detailsSection {
+  position: absolute;
+  top: 0;
+  margin-left: 5vw;
+  height: 100vh;
+  //border: 1px solid red;
+  //top: 15vh;
+  padding-top: 10vh;
+  h1 {
+    font-size: 6vw;
+  }
+  #tagline {
+    margin-top: 1vh;
+    width: 50vw;
+    letter-spacing: 1px;
+    font-size: 1vw;
+    line-height: 3vh;
+    color: rgb(228, 228, 228);
+  }
+  sup {
+    margin-left: 0.6rem;
+    font-size: 1vw;
+  }
+  #rating {
+    font-size: 3.5vw;
+    color: rgb(255, 0, 98);
+    font-weight: bolder;
+    margin-left: 0.5vw;
+    //border: 1px solid red;
+  }
+  #runtime {
+    margin-top: 10vh;
+  }
+  :nth-child(5) {
+    margin-top: 2vh;
+  }
+}
+
+#dateSpan {
+  display: inline-flex;
+  align-items: center;
+  margin-top: 2vh;
+  margin-left: 0.5vw;
+  // border: 1px solid red;
+
+  :nth-child(1) {
+    margin-right: 1rem;
+    font-size: 1.4vw;
+  }
+  #sp {
+    margin-right: 0.5vw;
+    border: 1px solid rgb(214, 214, 214);
+    border-radius: 0.2rem;
+    padding: 0.1rem 0.2rem 0.1rem 0.2rem;
+    font-size: 1vw;
+  }
+}
+
+#coverPic {
+  // border: 1px solid rgb(51, 255, 0);
+  height: 100vh;
+  filter: brightness(0.9);
+  opacity: 0.5;
+  box-shadow: 0rem -2rem 5rem 1rem black inset;
 }
