--- a/src/scss/SimilarMovies.scss
+++ b/src/scss/SimilarMovies.scss
@@ -2,10 +2,8 @@
   position: absolute;
   left: 54vw;
   top: 100vh;
-  //border: 1px solid rgb(255, 255, 255);
   height: auto;
-  //width: 40vw;
-
+  margin-top: 4vh;
   h2 {
     // margin-top: 2vh;
     letter-spacing: 2px;
