--- a/src/scss/FirstPage.scss
+++ b/src/scss/FirstPage.scss
@@ -1,26 +1,70 @@
-#popularity {
-  border: 1px solid rgb(134, 237, 255);
-  border-radius: 0.4rem;
-  outline: none;
-  background: none;
-  padding: 0.8vw 1vw 0.8vw 1vw;
-  color: rgb(61, 207, 233);
-  position: absolute;
-  top: 5vh;
-  right: 20vh;
-  z-index: 1;
-  appearance: none;
+%sameAlign {
+  position: relative;
   background: url("../assets/images/chevron1.svg");
   background-repeat: no-repeat;
   background-position: right 1vw top 50%, 0 0;
   background-size: 1.5vw auto, 100%;
-  width: 10vw;
+  cursor: pointer;
+  border: 1px solid rgb(134, 237, 255);
+  border-radius: 0.4rem;
+  outline: none;
+  padding: 0.8vw 1vw 0.8vw 1vw;
+  color: rgb(61, 207, 233);
   font-size: 1vw;
+  width: 10vw;
+  z-index: 1;
+}
+
+#popularity {
+  appearance: none;
+  @extend %sameAlign;
   option {
     display: block;
     border: none;
     outline: none;
     color: rgb(0, 0, 0);
     border-radius: 0.4rem;
+  }
+  margin-right: 2vw;
+}
+
+#menuIcon {
+  img {
+    position: fixed;
+    z-index: 2;
+    top: 5vh;
+    right: 5vw;
+    cursor: pointer;
+    transition: 0.5s;
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+}
+#basicMenu {
+  background: rgb(0, 0, 0);
+  border-bottom: 1px solid rgb(0, 238, 255);
+  height: 15vh;
+  position: fixed;
+  padding-left: 10vw;
+  z-index: 1;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.SelectMenu {
+  transition: 0.2s;
+}
+
+.HideMenu {
+  transform: translateY(-100%);
+  transition: 0.2s;
+}
+
+#genreList {
+  p {
+    @extend %sameAlign;
   }
 }
