--- a/src/scss/Cast.scss
+++ b/src/scss/Cast.scss
@@ -26,6 +26,7 @@
   p {
     font-size: 1vw;
     margin-top: 1vh;
+    color: white;
   }
 }
 
@@ -41,6 +42,7 @@
   //border: 1px solid red;
   width: 40vw;
   height: auto;
+  margin-bottom: 4rem;
 }
 
 #faceScan {
