--- a/src/scss/FirstPage.scss
+++ b/src/scss/FirstPage.scss
@@ -1,5 +1,31 @@
-%sameAlign {
+#mainMenu {
   position: fixed;
+  z-index: 10;
+  width: 100%;
+  height: 15vh;
+  padding: 0 20vw 0 10vw;
+  background: rgb(0, 0, 0);
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: 0.24s;
+}
+
+.HideMenu {
+  transform: translateY(-100%);
+}
+
+#menuIcon {
+  position: fixed;
+  z-index: 12;
+  cursor: pointer;
+  right: 5vw;
+  top: 5vh;
+  transition: 0.5s;
+}
+
+%styleforDivs {
   background: url("../assets/images/chevron1.svg");
   background-repeat: no-repeat;
   background-position: right 1vw top 50%, 0 0;
@@ -10,98 +36,62 @@
   outline: none;
   padding: 0.8vw 1vw 0.8vw 1vw;
   color: rgb(61, 207, 233);
-  font-size: 1vw;
-  width: 10vw;
-  z-index: 1;
-  top: 5vh;
+  font-size: 2.5vmin;
+  width: 20vmin;
+  z-index: 10;
 }
 
-%menuSetting {
-  background: rgb(0, 0, 0);
-  border-bottom: 1px solid rgb(0, 238, 255);
-  height: 17vh;
-  position: fixed;
-  padding-left: 10vw;
-  z-index: 1;
-  width: 100%;
-  //overflow: hidden;
-  //display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-#popularity {
-  appearance: none;
-  @extend %sameAlign;
-  option {
-    display: block;
-    border: none;
-    outline: none;
-    color: rgb(0, 0, 0);
-    border-radius: 0.4rem;
+#popGenreList {
+  display: flex;
+  // border: 1px solid red;
+  div {
+    @extend %styleforDivs;
   }
-  margin-right: 2vw;
-}
-
-#menuIcon {
-  img {
-    position: fixed;
-    z-index: 2;
-    top: 5vh;
-    right: 5vw;
-    cursor: pointer;
-    transition: 0.5s;
-    &:hover {
-      transform: scale(1.1);
-    }
-  }
-}
-#basicMenu {
-  @extend %menuSetting;
-}
-.SelectMenu {
-  transition: 0.2s;
-}
-
-.HideMenu {
-  transform: translateY(-100%);
-  transition: 0.2s;
-}
-
-#genreList {
-  p {
-    @extend %sameAlign;
-    left: 22vw;
+  select {
+    @extend %styleforDivs;
+    margin-right: 2vw;
+    appearance: none;
   }
 }
 
 .genreGrid {
-  position: relative;
+  position: fixed;
+  left: 0;
+  top: 15vh;
+  background: black;
+  color: white;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
-  //border: 1px solid red;
-  top: 15vh;
-
-  #genreDiv {
-    margin-top: 2vh;
-    color: white;
-    background: black;
-    opacity: 1;
+  width: 100%;
+  padding: 2vw 0vw 2vw 10vw;
+  div {
+    padding: 1vw;
     cursor: pointer;
-    //padding: 1vw;
+    color: rgb(94, 212, 228);
     transition: 0.5s;
+    font-size: 3.5vmin;
     &:hover {
-      color: rgb(0, 217, 255);
+      color: white;
     }
   }
-  #genreDivShow {
-    color: red;
-    display: none;
-  }
+  z-index: 1;
+  transition: 0.5s;
 }
 
-#increaseWidth {
-  @extend %menuSetting;
-  height: 50vh;
+#genreDivShow {
+  transform: translateY(-150%);
+}
+
+#typeHeading {
+  position: fixed;
+  width: auto;
+  z-index: 1;
+  transform: rotateZ(90deg);
+  transform-origin: right;
+  font-size: 4vw;
+  top: 90vh;
+  right: 6vw;
+  color: rgb(154, 231, 255);
+  opacity: 0.4;
 }
