--- a/src/scss/movieDetailsPage.scss
+++ b/src/scss/movieDetailsPage.scss
@@ -6,8 +6,8 @@
   transform: translate(-50%, -50%);
   font-size: 5vw;
   color: rgb(255, 255, 255);
-  background: rgb(0, 0, 0);
-  border: 1px solid whitesmoke;
+  //background: rgb(0, 0, 0);
+  //border: 1px solid whitesmoke;
 }
 
 #setMoviePage {
