--- a/src/scss/HeroContent.scss
+++ b/src/scss/HeroContent.scss
@@ -1,9 +1,13 @@
+@import "responsive";
+
 body {
   background: black;
 }
+
 #hero {
   z-index: 1;
 }
+
 #heroPic {
   position: sticky;
   top: 0;
@@ -11,7 +15,6 @@ body {
   height: 100vh;
   box-shadow: 0rem -1rem 5rem 2rem rgb(0, 0, 0) inset,
     0rem -2rem 7rem 4rem rgb(36, 36, 36) inset;
-  //border: 1px solid red;
   background-attachment: fixed;
 }
 
@@ -21,9 +24,7 @@ body {
   background-attachment: fixed;
   margin-left: 10vw;
   padding: 5vw 0 5vw 0;
-  //width: 40vw;
   height: 100vh;
-  // border: 1px solid white;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -31,39 +32,31 @@ body {
   justify-content: space-between;
   color: rgb(240, 240, 240);
   h1 {
-    // border: 1px solid red;
     font-size: 10.5vmin;
     text-align: left;
     display: flex;
     flex-direction: column;
     width: 70%;
-    //margin-bottom: 5vw;
     opacity: 0.8;
     color: rgb(243, 243, 243);
+    @include media(400px) {
+      width: 90%;
+      font-size: 18vmin;
+    }
+    @include media(769px) {
+      width: 90%;
+      font-size: 15vmin;
+    }
   }
-
-  p {
-    font-size: 1.4vw;
-  }
-}
-
-.togetherTop {
-  //border: 1px solid red;
-  //position: absolute;
-  //top: 2vw;
-  //margin-left: 0.5vw;
 }
 
 #vote {
   display: flex;
   align-items: baseline;
   margin-top: 1vw;
-
-  //border: 1px solid red;
   sup {
     margin: 0vw 0 0 0.8vw;
     font-size: 0.8vw;
-
     span {
       color: rgb(156, 156, 156);
       margin-right: 0.2vw;
@@ -76,6 +69,7 @@ body {
     transform: translateY(35%);
   }
 }
+
 #voteAvg {
   color: rgb(255, 0, 119);
   font-size: 2vw;
@@ -83,6 +77,11 @@ body {
   padding: 0vw 0.5vw 0.1vw 0.5vw;
   border: 2px solid rgb(255, 0, 119);
   border-radius: 0.25rem;
+
+  @include media(768px) {
+    font-size: 4.5vmin;
+    width: 100%;
+  }
 }
 
 #releasedYear {
@@ -90,6 +89,9 @@ body {
   font-weight: bold;
   display: flex;
   align-items: center;
+  @include media(768px) {
+    font-size: 3vmin;
+  }
   #genre {
     margin-left: 1vw;
     color: rgb(255, 255, 255);
@@ -97,6 +99,9 @@ body {
       font-size: 1.5vw;
       font-weight: 350;
       color: rgb(187, 187, 187);
+      @include media(768px) {
+        font-size: 3vmin;
+      }
     }
   }
 }
@@ -110,59 +115,30 @@ body {
   border-radius: 0.4rem;
   margin-left: 0.5vw;
   margin-top: 1vw;
-}
 
-#watchTrailer {
-  //position: absolute;
-  //bottom: 4vw;
-  font-size: 1.2vw;
-  cursor: pointer;
-  color: rgb(181, 176, 224);
-  margin-left: 0.5vw;
-  i {
-    margin-right: 0.5vw;
+  @include media(768px) {
+    font-size: 3vmin;
+    width: 3.5rem;
+  }
+  @include media(420px) {
+    font-size: 5vmin;
+    width: 3.5rem;
   }
 }
 
-iframe {
-  border: 1px solid red;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  top: 10%;
-
-  //transform: translateY(-50%);
-  //transform: translateX(-50%);
-  transform: scale(0);
-  transition: 0.5s;
-  width: 75vw;
-  height: 75vh;
-}
-
-.iFrame {
-  border: 2px solid blue;
-  transform: scale(1);
-  transform: translateY(-50%);
-  transform: translateX(-50%);
-}
-
-.closeIcon {
-  color: rgb(255, 255, 255);
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 2vw;
-  font-size: 8vmin;
+#watchTrailer {
   cursor: pointer;
-  opacity: 0;
-  transition: 0.5s;
-}
+  color: rgb(214, 206, 255);
+  margin-left: 0.5vw;
+  text-decoration: none;
+  @include media(420px) {
+    position: absolute;
+    font-size: 5vmin;
+    bottom: 7vh;
+  }
 
-#closeVid {
-  opacity: 0.4;
-  transform: translateY(-100%);
-}
-
-GetVideos {
-  border: 1px solid red;
+  i {
+    margin-right: 0.5vw;
+    color: rgb(152, 172, 216);
+  }
 }
