--- a/src/scss/Cast.scss
+++ b/src/scss/Cast.scss
@@ -1,23 +1,28 @@
+@import "responsive";
+
 .Cast {
-  //border: 1px solid red;
   width: 45vw;
   margin-left: 5vw;
   height: auto;
-  //padding-top: 4vh;
   margin-top: 4vh;
 
-  img {
-    width: 4rem;
-  }
   h2 {
     letter-spacing: 2px;
     margin-bottom: 4vh;
     color: rgb(204, 207, 226);
   }
+  @include media(650px) {
+    width: 90vw;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 #flexCast {
   display: flex;
+  @include media(650px) {
+    //flex-wrap: wrap;
+  }
 }
 
 #castBox {
@@ -28,21 +33,37 @@
     margin-top: 1vh;
     color: white;
   }
+  @include media(650px) {
+    p {
+      font-size: 2.5vmin;
+    }
+  }
+  @include media(360px) {
+    p {
+      font-size: 3vmin;
+    }
+  }
 }
 
 #character {
   font-size: 0.9vw;
   color: rgb(201, 201, 201);
+  //border: 1px solid yellow;
 }
 
 .Crew {
   position: absolute;
   left: 54vw;
   top: 200vh;
-  //border: 1px solid red;
   width: 40vw;
   height: auto;
   margin-bottom: 4rem;
+  @include media(650px) {
+    position: relative;
+    top: auto;
+    left: auto;
+    margin: 4vh 0 0 0;
+  }
 }
 
 #faceScan {
