--- a/src/scss/Reviews.scss
+++ b/src/scss/Reviews.scss
@@ -1,3 +1,5 @@
+@import "responsive";
+
 .Reviews {
   width: 45vw;
   height: auto;
@@ -6,15 +8,15 @@
   margin-top: 8vh;
   h2 {
     letter-spacing: 2px;
-    //margin-top: 4vh;
     color: rgb(204, 207, 226);
   }
   margin-bottom: 2rem;
+  @include media(650px) {
+    width: 90vw;
+  }
 }
 
 #review {
-  // padding: 1vw 2vw 1vw 2vw;
-  // border: 1px solid rgb(255, 255, 255);
   border-radius: 0.3rem;
   margin-top: 4vh;
   h3 {
@@ -27,5 +29,11 @@
     letter-spacing: 0.1vh;
     width: 95%;
     color: rgb(171, 170, 212);
+  }
+  @include media(650px) {
+    p {
+      font-size: 4vmin;
+      line-height: 4.5vmin;
+    }
   }
 }
